# rent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  OCR_USAGE.md  QUICKSTART.md  README.md  README_DATABASE.md  README_USERS.md  cookies.txt  debug_units.py  docker-compose.prod.yml  docker-compose.yml  env.example  env.prod.example  manage.py  pyproject.toml  pytest.ini  setup.cfg  start_prod.sh  tatus  utility_bill_data.json
.github/workflows/: docker-build.yml
backend/: Dockerfile  requirements.txt
backend/apps/accounts/: admin.py  models.py  serializers.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/invoices/: admin.py  models.py  pdf_parser.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/invoices/migrations/: 0001_initial.py  0002_lineitem_debt.py  0003_invoice_insurance_amounts.py  0004_alter_lineitem_debt.py
backend/apps/payments/: admin.py  models.py  serializers.py
backend/apps/payments/migrations/: 0001_initial.py
backend/config/: celery.py  settings.py  urls.py
backend/tests/: generate_fixtures.py  test_accounts.py  test_invoices.py  test_pdf_parser.py
collect/rent/: apps.py  models.py  services.py  urls.py  views.py
collect/rent/migrations/: 0001_initial.py  0002_alter_serviceinfo_options.py
collect/rent/templates/rent/: index.html  list_payslips.html  payslips.html
collect/reports/: apps.py  urls.py  views.py
collect/reports/templates/reports/: index.html
collect/templatags/: generate_hash.py
collect/users/: apps.py  forms.py  views.py
collect/users/templates/users/: login.html
config/: settings.py  urls.py
epd_parser/: __init__.py  admin.py  apps.py  forms.py  models.py  ocr_parser.py  pdf_parse.py  urls.py  views.py
epd_parser/migrations/: 0001_initial.py  0002_alter_servicecharge_tariff_and_more.py  0003_alter_epddocument_insurance_amount_meterreading_and_more.py  0004_servicecharge_recalculation.py  0005_add_unit_field.py  0006_remove_pdf_file_field.py  0007_flexibleservicecharge.py  0008_alter_epddocument_due_date.py  0009_remove_flexible_service_charge.py  0010_epddocument_epd_parser__created_ed11a8_idx_and_more.py  0011_allow_negative_amounts.py  __init__.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/auth-cookie/clear/: route.ts
frontend/src/app/auth-cookie/set-refresh/: route.ts
frontend/src/app/dashboard/: dashboard.module.css  page.tsx
frontend/src/app/invoices/[id]/: invoice.module.css  page.tsx
frontend/src/app/login/: login.module.css  page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reports/: page.tsx  reports.module.css
frontend/src/lib/: api.ts  auth.ts
nginx/: nginx.conf
scripts/: uv-run.sh
static/css/: style.css  styles.css  styles.map  upload.css
static/js/: app.js  upload.js
templates/: base.html
templates/epd_parser/: debug_images.html  document_detail.html  document_list.html  edit.html  flexible_service_detail.html  flexible_service_list.html  home.html  parser_demo.html  search.html  statistics.html  upload.html
templates/users/: login.html  profile.html  profile_edit.html  register.html
tests/: __init__.py  test_parser.py  test_parser_test.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
utility_parser/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
